@@ -8,7 +8,6 @@ attr global verbose 3
 
 define FHZ FHZ none
 
-defattr
 define btn4 FS20 1234 03
 define cellar FS20 1234 13
 define fl FHT 1236
@@ -19,4 +18,3 @@ define tf1 HMS 1237
 define window.lamp FS20 1234 02
 define wz FHT 1235
 define x SCIVT none
-defattr
